<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/scheduleSMSDialogue_messageEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/scheduleSMSDialogue_smsText"
        android:lines="2"
        android:textColor="#000000"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/scheduleSMSDialogue_phoneNoEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="phone" />

        <Button
            android:id="@+id/scheduleSMSDialogue_contactsBtn"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_weight="0"
            android:background="@drawable/contacts" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scheduleSMSDialogue_dateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/btn_design_round"
            android:padding="5dip"
            android:text="@string/scheduleSMSDialogue_date" >
        </Button>

        <TextView
            android:id="@+id/scheduleSMSDialogue_dateTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:minWidth="20dip"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scheduleSMSDialogue_timeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/btn_design_round"
            android:padding="5dip"
            android:text="@string/scheduleSMSDialogue_time" >
        </Button>

        <TextView
            android:id="@+id/scheduleSMSDialogue_timeTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:minWidth="20dip"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scheduleSMSDialogue_saveBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:background="@drawable/btn_design_for_main_functions"
            android:text="@string/scheduleSMSDialogue_saveContact" />

        <Button
            android:id="@+id/scheduleSMSDialogue_cancelBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:background="@drawable/btn_design_for_main_functions"
            android:text="@string/scheduleSMSDialogue_cancelContacts" />
    </LinearLayout>

</LinearLayout>