<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:scrollbars="vertical"
    android:background="#3B5999"
    android:stretchColumns="1" >

    <TableRow android:layout_weight="0.5" >

        <TextView
            android:id="@+id/HomeScreen_headerTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/homeScreen_headerText"
            android:textSize="30sp"
            android:textStyle="bold|italic" />
    </TableRow>

    <TableRow android:layout_weight="1" >

        <ListView
            android:id="@+id/listView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:divider="#0000CC"
            android:dividerHeight="1dp" 
            android:background="@drawable/btn_design_round" />
    </TableRow>

    <TableRow
        android:layout_gravity="bottom"
        android:layout_weight="0" >

        <Button
            android:id="@+id/HomeScreen_addReminderBtn"
            android:text="@string/homeScreen_addReminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dip"
            android:minHeight="0dp"
            android:onClick="displayAddReminderScreen"
            android:background="@drawable/btn_design_for_main_functions" />

        <Button
            android:id="@+id/HomeScreen_deleteReminderBtn"
            android:text="@string/homeScreen_deleteReminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="0dp"
            android:padding="10dip"
            android:onClick="displayDeleteReminderDialogue"
            android:background="@drawable/btn_design_for_main_functions" />
    </TableRow>

</TableLayout>